<resources>
    <string name="app_name">DPMO_U3_EA_VERM</string>
    <string name="btnSalir">Salir</string>
    <string name="btnRegistro">Registro</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnRegresar">Regresar</string>
    <string name="txtDatos">
        Verónica Ruíz Manzo\n
        DS-DPMO-2202-B2-004
    </string>
    <string name="txtBienvenida">Bienvenidos</string>
    <string name="txtResultado">Resultado: </string>
    <string name="hintNombre">Nombre</string>
    <string name="hintApellidos">Apellidos</string>
    <string name="hintEdad">Edad</string>
    <string name="hintEstado">Estado de residencia</string>
    <string name="hintTelefono">Teléfono</string>
    <string name="hintCorreo">Correo electrónico</string>
    <string name="txtSexo">Sexo: </string>
    <string-array name="strSexo">
        <item>Femenino</item>
        <item>Masculino</item>
        <item>Otro</item>
    </string-array>
    <string name="txtPais">País de residencia: </string>
    <string-array name="strPais">
        <item>México</item>
        <item>Colombia</item>
        <item>Argentina</item>
        <item>Chile</item>
        <item>Brasil</item>
    </string-array>


</resources>